--- a/app/frontend/src/components/EloTable.css
+++ b/app/frontend/src/components/EloTable.css
@@ -129,7 +129,7 @@ nav.pagination.pagination-margin {
 
   .elo-table th,
   .elo-table td {
-    padding: 0.35rem 0.5rem;
+    padding: 0.45rem 0.5rem;
   }
 }
 
