--- a/app/frontend/src/components/NameInfo.css
+++ b/app/frontend/src/components/NameInfo.css
@@ -22,7 +22,6 @@
 
 .country-flag {
   line-height: 15px;
-  margin-top: 2px;
   vertical-align: middle;
   border: 1px solid #ccc;
   width: 19px;
